# rust-server-auth-me

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
auth-me/: .env.example  .gitignore  Cargo.toml  Makefile  diesel.toml  docker-compose.yml  init.sql
auth-me/.github/workflows/: ci.yml
auth-me/docs/: api.md  deployment.md
auth-me/migrations/2025-04-01-182320_users/: up.sql
auth-me/migrations/2025-04-01-183043_posts/: up.sql
auth-me/migrations/2025-04-14-182301_change_password_column_type/: down.sql  up.sql
auth-me/migrations/2025-04-17-172100_post_to_user/: down.sql  up.sql
auth-me/migrations/2025-04-29-175321_add_verification_fields_to_users/: down.sql  up.sql
auth-me/migrations/2025-05-21-144108_users/: down.sql  up.sql
auth-me/migrations/2025-05-29-181526_users/: down.sql  up.sql
auth-me/migrations/2025-05-31-030655_users/: up.sql
auth-me/migrations/2025-05-31-030658_pending_users/: down.sql  up.sql
auth-me/migrations/2025-06-01-023646_users/: up.sql
auth-me/migrations/2025-06-01-023654_pending_users/: down.sql  up.sql
auth-me/migrations/2025-06-07-021110_users/: down.sql
auth-me/migrations/2025-06-07-021118_pending_users/: up.sql
auth-me/src/: changes.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs
auth-me/src/auth/: handlers.rs  middleware.rs  mod.rs  router.rs  services.rs
auth-me/src/config/: aws.rs  cache.rs  database.rs  email.rs  logging.rs  mod.rs  validation.rs
auth-me/src/connection/: database.rs  email.rs  mod.rs  seed.rs
auth-me/src/database/: connection.rs  mod.rs  seed.rs
auth-me/src/database/operations/: posts.rs  users.rs
auth-me/src/database/seeders/: database.rs  mod.rs  users.rs
auth-me/src/dto/: authentication_dtos.rs  create_user.rs  create_user_dtos.rs  email_dtos.rs  mod.rs  post_dtos.rs  user_dtos.rs
auth-me/src/email/: emails.rs  mod.rs  send_email.rs  template_cache.rs
auth-me/src/email/templates/: admin-created-user-with-password.html  admin-created-user-without-password.html  admin-password-reset.html  reset-password-email.html  verification-email.html  welcome-email.html
auth-me/src/examples/: usage.rs
auth-me/src/handlers/: additional_cache_handlers.rs  authentication_handlers.rs  general_handlers.rs  mod.rs  user_handlers.rs
auth-me/src/middleware/: auth.rs  cookies.rs  cors.rs  csrf.rs  jwt.rs  metrics.rs  mod.rs  rate_limiter.rs  security_headers.rs
auth-me/src/models/: api.rs  mod.rs  pending_user.rs  post.rs  user.rs
auth-me/src/operations/: mod.rs  post_operations.rs  user_operations.rs
auth-me/src/repositories/: mod.rs  pending_user_repository.rs  user_repository.rs
auth-me/src/routes/: general.rs  general_router.rs  mod.rs  users.rs
auth-me/src/routes/api/: auth_router.rs  mod.rs  posts.rs  requests.rs  users.rs  users_router.rs
auth-me/src/services/: cache_invalidation_services.rs  cache_services.rs  email_services.rs  enhanced_cache_services.rs  mod.rs  user_service.rs
auth-me/src/tests/: mod.rs
auth-me/src/utils/: mod.rs  password.rs  reports.rs  settings.rs  token.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  fetch.ts
frontend/src/pages/: SignUp.tsx
