[package]
name = "auth-me"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"
axum = "0.8.3"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-macros = "0.5.0"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
cookie = "0.18.1"
csrf = "0.5.0"
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
lettre = "0.11.15"
log = "0.4.27"
rand = "0.9.0"
regex = "1.11.1"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "set-header", "set-status", "trace", "validate-request",] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.5.3"
