[package]
name = "auth-me"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8.3"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-macros = "0.5.0"
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "set-header", "set-status", "trace", "validate-request"] }

# Database
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Authentication & Security
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4.40", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

#Validation
validator = { version = "0.16.1", features = ["derive"] }

# Caching (Redis)
redis = { version = "0.31.0", features = ["tokio-comp"] }
redis-cli = "0.3.1"

# Email
lettre = { version = "0.11.15", features = ["tokio1-native-tls", "smtp-transport"] }

# Logging & Tracing
env_logger = "0.11.8"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Environment & Configuration
dotenvy = "0.15.7"
thiserror = "2.0.12"

# Utilities
base64 = "0.22.1"
regex = "1.11.1"
ring = "0.17.14"
lazy_static = "1.5.0"
rand = "0.9.0"

# HTTP
cookie = "0.18.1"
csrf = "0.5.0"
futures = "0.3.31"
http-body-util = "0.1.3"

# Template Processing (for email templates)
handlebars = "5.1"

anyhow = "1.0"

[dev-dependencies]
cargo-watch = "8.5.3"

# Testing
tokio-test = "0.4"